--- a/.gitignore
+++ b/.gitignore
@@ -19,5 +19,16 @@
 *.tar.gz
 *.rar
 
+# Eclipse dirt #
+/.settings/
+/bin/
+.classpath
+.project
+*.classpath
+*.project
+
+# other #
+*.docx
+
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
