--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,7 @@
   <artifactId>Sorting-algorithms-visualized</artifactId>
   <version>0.0.1</version>
   <build>
+    <finalName>Sorting-algorithms-visualized</finalName>
     <sourceDirectory>src</sourceDirectory>
     <resources>
       <resource>
