--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ script: ./build.sh
 deploy:
   provider: releases
   tag_name: "$TRAVIS_TAG"
-  file: "target/"
+  file: "target/Sorting-algorithms-visualized.jar"
   name: "Sorting-algorithms-visualized $TRAVIS_TAG"
   skip_cleanup: true
   api_key:
