--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,20 @@
           <target>1.8</target>
         </configuration>
       </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-jar-plugin</artifactId>
+      	<configuration>
+      	  <excludes>
+            <!-- exclude>**/log4j.properties</exclude -->
+          </excludes>
+          <archive>
+            <manifest>
+              <mainClass>me.rueno.Sortingalgorithms.Main</mainClass>
+            </manifest>
+          </archive>
+      	</configuration>
+      </plugin>
     </plugins>
   </build>
   <dependencies>
